# libgmxcpp

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  conf  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/: CMakeCache.txt  CTestTestfile.cmake  FindSphinx.cmake  Makefile  cmake_install.cmake
cmake/docs/: Makefile  cmake_install.cmake
cmake/include/: Makefile  cmake_install.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake/tests/: Makefile  cmake_install.cmake  test.ndx
docs/: CMakeLists.txt  Doxyfile  Frame.rst  Index.rst  Trajectory.rst  about.rst  analysis.rst  api.rst  cite.rst  classes.rst  conf.py  coordinates.rst  data.rst  example.rst  files.rst  index.rst  installation.rst  licence.rst  license.rst  triclinicbox.rst  usage.rst
docs/classes/: Trajectory.rst  coordinates.rst
docs/doxyxml/: Clusters_8cpp.xml  Clusters_8h.xml  CommandLine_8cpp.xml  CommandLine_8h.xml  Frame_8cpp.xml  Frame_8h.xml  Index_8cpp.xml  Index_8h.xml  README_8md.xml  Trajectory_8h.xml  Uncertainty_8cpp.xml  Uncertainty_8h.xml  Utils_8h.xml  classClusters.xml  classFrame.xml  classIndex.xml  classTrajectory.xml  classcoordinates.xml  classtriclinicbox.xml  coordinates_8h.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_a8defce7a1f27a14959daf02694dc423.xml  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  example_8cpp.xml  index.xml  indexpage.xml  namespacestd.xml  src_2Trajectory_8cpp.xml  src_2Utils_8cpp.xml  src_2coordinates_8cpp.xml  src_2triclinicbox_8cpp.xml  structXDR.xml  structXDRFILE.xml  structXDR_1_1xdr__ops.xml  tests_2Trajectory_8cpp.xml  tests_2Utils_8cpp.xml  tests_2coordinates_8cpp.xml  tests_2triclinicbox_8cpp.xml  (+6 more)
docs/files/: Index.cpp.rst  Trajectory.cpp.rst  Trajectory.h.rst  Utils.h.rst
docs/source/: Makefile  about.rst  conf.py  index.rst  make.bat
docs/source/_build/doctrees/: about.doctree  coordinates.doctree  environment.pickle  index.doctree  installation.doctree
docs/source/_build/html/: .buildinfo  about.html  coordinates.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
example/: .gitignore  Makefile  example.cpp  main.cpp
html/: CommandLine_8h_source.html  Frame_8h_source.html  Index_8h_source.html  Trajectory_8h_source.html  Utils_8h_source.html  annotated.html  classFrame-members.html  classFrame.html  classIndex-members.html  classIndex.html  classTrajectory-members.html  classTrajectory.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  md_README.html  pages.html
html/search/: all_0.js  all_2.js  all_4.js  functions_0.js  functions_1.js  functions_2.js  search.js
include/: CMakeLists.txt  CommandLine.h  Frame.h  Index.h  Makefile  Makefile.am  Makefile.in  Trajectory.h  Utils.h  coordinates.h  triclinicbox.h  vdw.h  xdrfile.h
include/gmxcpp/: Clusters.h  CommandLine.h  Energy.h  Frame.h  Index.h  Topology.h  Trajectory.h  Uncertainty.h  Utils.h  coordinates.h  coordinates4.h  coordinates8.h  cubicbox.h  cubicbox8.h  cubicbox_m256.h  triclinicbox.h  vdw.h  xdrfile_xtc.h
latex/: annotated.tex  classFrame.tex  classIndex.tex  classTrajectory.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  md_README.tex  refman.tex
src/: CMakeLists.txt  Clusters.cpp  CommandLine.cpp  Energy.cpp  Frame.cpp  Index.cpp  Makefile  Makefile.am  Makefile.in  Topology.cpp  Trajectory.cpp  Uncertainty.cpp  Utils.cpp  coordinates.cpp  coordinates4.cpp  coordinates8.cpp  cubicbox.cpp  cubicbox8.cpp  cubicbox_m256.cpp  triclinicbox.cpp  xdrfile.c  xdrfile_xtc.c
tests/: CMakeLists.txt  Clusters.cpp  Topology.cpp  Trajectory.cpp  Utils.cpp  clustertest.ndx  clustertest.xtc  coordinates.cpp  test.tpr  tests.cpp  tests.h  triclinicbox.cpp
