cmake_minimum_required(VERSION 2.8)
project(gmxcpp)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set (gmxcpp_VERSION_MAJOR 1)
set (gmxcpp_VERSION_MINOR 0)
set(CMAKE_CXX_FLAGS "-march=native -O3 -ftree-vectorize -Wall -fopenmp")
add_subdirectory(include)
include_directories(include)
add_subdirectory(src)
add_subdirectory(docs)

project(tests)
add_subdirectory(tests)
enable_testing()
add_test(coordinates tests/coordinates_test)
add_test(triclinicbox tests/triclinicbox_test)
add_test(Utils tests/Utils_test)
add_test(Trajectory tests/Trajectory_test)
add_test(Clusters tests/Clusters_test)
add_test(Topology tests/Topology_test)
