
AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libgmxcpp.la

LDADD = $(lib_LTLIBRARIES)

libgmxcpp_la_LIBADD         = 
libgmxcpp_la_DEPENDENCIES   = 
libgmxcpp_la_LDFLAGS        = -version-info @SHARED_VERSION_INFO@


libgmxcpp_la_SOURCES = \
			CommandLine.cpp	\
			Index.cpp 		\
			Frame.cpp 		\
			Trajectory.cpp	\
			Utils.cpp


CLEANFILES   = 	*~ \\\#*
